--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -40,7 +40,7 @@ collections:
           - {label: "Cover", name: "cover", widget: "image"}
     - name: "tutorials"
       label: "Tutorial"
-      folder: "content/tutorial"
+      folder: "content/tutorials"
       create: true
       slug: "tutorials/{{slug}}"
       fields:
