--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -13,9 +13,10 @@ collections:
       slug: "{{slug}}"
       fields:
           - {label: "Title", name: "title", widget: "string"}
-          - {label: "Excerpt", name: "excerpt", widget: "string"}
+          - {label: "Description", name: "description", widget: "string"}
           - {label: "Publish Date", name: "date", widget: "date"}
           - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Author", name: "author", widget: "string"}
           - {label: "Fullscreen", name: "fullscreen", widget: "boolean" }
           - label: "Tags"
             name: "tags"
@@ -29,8 +30,9 @@ collections:
       slug: "articles/{{slug}}"
       fields:
           - {label: "Title", name: "title", widget: "string"}
-          - {label: "Excerpt", name: "excerpt", widget: "string"}
+          - {label: "Description", name: "description", widget: "string"}
           - {label: "Publish Date", name: "date", widget: "date"}
+          - {label: "Author", name: "author", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Fullscreen", name: "fullscreen", widget: "boolean" }
           - label: "Tags"
@@ -45,8 +47,9 @@ collections:
       slug: "tutorials/{{slug}}"
       fields:
           - {label: "Title", name: "title", widget: "string"}
-          - {label: "Excerpt", name: "excerpt", widget: "string"}
+          - {label: "Description", name: "description", widget: "string"}
           - {label: "Publish Date", name: "date", widget: "date"}
+          - {label: "Author", name: "author", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Fullscreen", name: "fullscreen", widget: "boolean" }
           - label: "Tags"
