--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -21,9 +21,9 @@ collections:
             name: "tags"
             widget: list
             field: { label: "Tag", name: "tag", widget: "string" }
-    - name: "guides"
-      label: "Guides"
-      folder: "static/guides"
+    - name: "crypto"
+      label: "Crypto"
+      folder: "static/guides/crypto"
       create: true
       slug: "{{slug}}"
       fields:
@@ -31,8 +31,3 @@ collections:
          - {label: "Description", name: "description", widget: "string"}
          - {label: "Publish Date", name: "date", widget: "date"}
          - {label: "Body", name: "body", widget: "markdown"}
-         - {label: "Author", name: "author", widget: "string"}
-         - label: "Tags"
-           name: "tags"
-           widget: list
-          field: { label: "Tag", name: "tag", widget: "string" }
