--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -13,6 +13,8 @@ collections:
       slug: "{{slug}}"
       fields:
           - {label: "Title", name: "title", widget: "string"}
+          - {label: "Summary", name: "summary", widget: "string"}
+          - {label: "Keywords", name: "Keywords", widget: "string" }
           - {label: "Description", name: "description", widget: "string"}
           - {label: "Publish Date", name: "date", widget: "date"}
           - {label: "Body", name: "body", widget: "markdown"}
