--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -41,6 +41,7 @@ collections:
           - {label: "Description", name: "description", widget: "string"}
           - {label: "Publish Date", name: "date", widget: "date"}
           - {label: "Text link", name: "text_link" , widget: "string"}
+          - {label: "Book Image", name: "book_image", widget: "markdown"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Author", name: "author", widget: "string"}
           - label: "Tags"
