--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "gridsome build"
+
+[build.environment]
+  NODE_VERSION = "12"
+
+[[plugins]]
+  package = "netlify-plugin-gridsome-cache"
