--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -33,3 +33,18 @@ collections:
          - {label: "Description", name: "description", widget: "string"}
          - {label: "Publish Date", name: "date", widget: "date"}
          - {label: "Body", name: "body", widget: "markdown"}
+
+    - name: "Authors"
+      label: "Authors"
+      folder: "static/authors"
+      create: true
+      slug: "{{slug}}"
+      identifier_field: "id"
+      fields:
+      - {label: "Github Username", name: "title", widget: "string", required: true, hint: "Github username" }
+      -  label: "Full name"
+         name: "name"
+         widget: "object"
+         fields:
+             - {label: "Firstname", name: "firstName", widget: "string", required: true}
+             - {label: "Lastname", name: "lastName", widget: "string", required: true }
